--- a/relazione/main.tex
+++ b/relazione/main.tex
@@ -38,13 +38,13 @@
 			pdfkeywords={thesis, sapienza, roma, university}
  }
 
-\title{A sample Bachelor's thesis for Sapienza Università di Roma}
+\title{Scheduler dei processi di un sistema operativo}
 \author{Simone Trenta}
 \IDnumber{1724141}
 \course[]{Ingegneria informatica ed automatica}
 \courseorganizer{Facolt\`a di Ingegneria dell'informazione, informatica e statistica}
-\submitdate{2019/2020}
-\copyyear{2019}
+\submitdate{2020/2021}
+\copyyear{2020}
 \advisor{Prof. Giorgio Grisetti}
 \authoremail{trenta.1724141@studenti.uniroma1.it}
 \examdate{22 September 2015}
