schemi a stati finiti

--- a/relazione/main.tex
+++ b/relazione/main.tex
@@ -38,7 +38,7 @@
 			pdfkeywords={thesis, sapienza, roma, university}
  }
 
-\title{Scheduler dei processi di un sistema operativo}
+\title{Scheduler dei processi di un sistema operativo, varie politiche, FCFS, RR, SJF, SRJF, MLFQ}
 \author{Simone Trenta}
 \IDnumber{1724141}
 \course[]{Ingegneria informatica ed automatica}
@@ -59,7 +59,10 @@
 \maketitle
 
 \begin{abstract}
-write your abstract here
+Tramite un progetto di simulazione di uno scheduler di un sistema operativo, si analizzano le varie politiche di scheduling fra le più comuni.
+Fra queste troviamo first came first served (FCFS), round robin (RR), shortest job first (SJF), shortest remaining job first (SRJF), multilevel feedback queue (MLFQ).
+I risultati ottenuti tramite la simulazione verranno poi analizzati e confrontati, in particolare si metterà in risalto come la differenza fra le politiche di scheduling, determina vari tempi di attesa, nonostante gli stessi dati di input.
+Tramite i sopra citati confronti si potrà poi determinare quale politica sia meglio per ogni calcolatore si voglia progettare, sapendo il lavoro che esso dovrà compiere.
 \end{abstract}
 
 \tableofcontents
